--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "express": "^4.18.3",
     "firebase": "^10.8.1",
     "git": "^0.1.5",
-    "vue": "^3.4.19"
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
