--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "animate.css": "^4.1.1",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
     "git": "^0.1.5",
     "install": "^0.13.0",
     "npm": "^10.5.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuetify": "^3.5.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
