--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "git": "^0.1.5",
     "install": "^0.13.0",
     "npm": "^10.5.0",
+    "sweetalert": "^2.1.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.0.13",
-    "vuetify": "^3.5.9"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
