--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm": "^10.5.0",
     "sweetalert": "^2.1.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuefire": "^3.1.23"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
