--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "npm": "^10.5.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.8",
     "vue": "^3.4.21",
     "vue-router": "^4.0.13",
     "vuefire": "^3.1.23"
